--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,12 +5,17 @@
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="17"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="Main"
+        <activity android:name=".Main"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+                android:name=".AddNew"/>
+        <!--这里没有的话，android就找不到addnew这个类啦。。。。。-->
+        <activity
+                android:name=".UserDetail"/>
     </application>
 </manifest>
